# snnTorch_Ternary

./: .gitignore  LICENSE.txt  README.md  basic_end_to_end_test.py  basic_func_test.py  pyproject.toml  requirements_dev.txt  test.py
snnTorch_Ternary/: __init__.py  neurons.py  spikegen.py
snntorch_ternary/: __init__.py  neurons.py  spikegen.py  surrogate.py
snntorch_ternary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
