[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snntorch-ternary"
version = "0.1.0"
description = "Ternary spiking neuron extensions for snnTorch"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "Marc DeCarlo", email = "marcadecarlo@gmail.com" }
]
dependencies = [
	"snntorch>=0.9.0",
	"torch>=1.12"
]

[project.urls]
Homepage = ""
Source = ""
