[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snntorch_ternary"
version = "0.1.1"
description = "Ternary spiking neuron extensions for snnTorch"
readme = "README.md"
requires-python = ">=3.9"
authors = [
	{ name = "Marc DeCarlo", email = "marcadecarlo@gmail.com" }
]
dependencies = [
	"snntorch>=0.9.0",
	"torch>=2.6.0",
	"numpy==2.2.6"
]

[project.urls]
Homepage = "https://github.com/mdecarlo26/snnTorch_Ternary/tree/main"
Source = "https://github.com/mdecarlo26/snnTorch_Ternary/tree/main"
